--- a/fakeStore/package.json
+++ b/fakeStore/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fake-store",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -27,6 +27,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
+    "ngx-bar-rating": "^7.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
